Removal of unnecessary code

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="styles.css"/>
+		<link rel="stylesheet" type="text/css" href="style.css"/>
 		<title>Resume</title>
 	</head>
 	<body>
-	
 		<h1> Jodianne Darien </h1>
 		<hr>
 		<img src="test.jpg"/>
@@ -19,7 +18,7 @@
 		related position that will challenge me while allowing positive personal and
 		professional growth </p>
 		
-		<div class="clear"></div>
+		<div class="space"></div>
 		
 		<div class="education">
 			<h3>Education</h3>
@@ -30,7 +29,7 @@
 				</ul>
 		</div>
 		
-		<div class="clear"></div>
+		<div class="space"></div>
 		
 		<div class="skills">
 			<h3>Skills</h3>
@@ -44,7 +43,7 @@
 			</ul>
 		</div>
 		
-		<div class="clear"></div>
+		<div class="space"></div>
 		
 		<div class="experience">
 			<h3> Work Experience</h3>
@@ -54,7 +53,7 @@
 			</ul>
 		</div>
 		
-		<div class="clear"></div>
+		<div class="space"></div>
 		
 		<div class="hobbies">
 			<h3>Hobbies</h3>
@@ -66,7 +65,7 @@
 			</ul>
 		</div>
 		
-		<div class="clear"></div>
+		<div class="space"></div>
 		
 		<div class="references">
 			<h3>References</h3>
@@ -75,7 +74,6 @@
 	   				<li> Jose Marti jmartin@yahoo.com 999-6543 Lecturer</li>
 	   		</ul>
 		</div>
-		
 
 	</body>
 </html>
