--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<img src="test.jpg"/>
 		<div class="contact">
 			<p id="cell">Cell number: 876-555-4531</p>
-			<p id="email"> Email: <a href="jodydarien@yahoo.com">jodydarien@yahoo.com </a></p>	
+			<p id="email">Email: <a href="jodydarien@yahoo.com">jodydarien@yahoo.com </a></p>	
 			<br/>
 		</div>
 		<p id="objective">I am a resourceful, self-motivating individual with 
@@ -18,15 +18,13 @@
 		related position that will challenge me while allowing positive personal and
 		professional growth </p>
 		
-		<div class="space"></div>
-		
 		<div class="education">
 			<h3>Education</h3>
-				<ul>
-					<lh>University of the West Indies </lh>
+				<ul>University of the West Indies (2015-2018)
 					<li>Major: Software Engineering </li>
 					<li>Minor: Economics </li>
 				</ul>
+				<ul>Campion College (Completed 6th form in 2015)</ul>
 		</div>
 		
 		<div class="space"></div>
@@ -59,9 +57,9 @@
 			<h3>Hobbies</h3>
 			<ul>
 				<li>Reading </li>
+				<li>Coding</li>
 				<li>Playings sims</li>
 				<li>Hiking </li> 
-				<li>Coding</li>
 			</ul>
 		</div>
 		
@@ -70,11 +68,9 @@
 		<div class="references">
 			<h3>References</h3>
 			<ul>
-	   				<li> Johnathan Grant johngrant@gmail.com 555-8865 justice of the Peace </li>
+	   				<li> Johnathan Grant johngrant@gmail.com 555-8865 Justice of the Peace </li>
 	   				<li> Jose Marti jmartin@yahoo.com 999-6543 Lecturer</li>
 	   		</ul>
 		</div>
-		
-
 	</body>
 </html>
