--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 		<h1> Jodianne Darien </h1>
 		<hr>
 		<img src="test.jpg"/>
-		<div class="contact">
+		<div id="contact">
 			<p id="cell">Cell number: 876-555-4531</p>
 			<p id="email">Email: <a href="jodydarien@yahoo.com">jodydarien@yahoo.com </a></p>	
-			<br/>
 		</div>
 		<p id="objective">I am a resourceful, self-motivating individual with 
 		strong work ethics and discipline. I am interested in a software development
 		related position that will challenge me while allowing positive personal and
 		professional growth </p>
 		
-		<div class="education">
+		<div id="education">
 			<h3>Education</h3>
 				<ul>University of the West Indies (2015-2018)
 					<li>Major: Software Engineering </li>
 					<li>Minor: Economics </li>
 				</ul>
+				<br/>
 				<ul>Campion College (Completed 6th form in 2015)</ul>
 		</div>
 		
 		<div class="space"></div>
 		
-		<div class="skills">
+		<div id="skills">
 			<h3>Skills</h3>
 			<ul>Computing skills
 					<li>Proficiency with Microsoft Suite</li>
@@ -43,7 +43,7 @@
 		
 		<div class="space"></div>
 		
-		<div class="experience">
+		<div id="experience">
 			<h3> Work Experience</h3>
 			<ul>
 					<li>Jamaica National Bank :- Security Department (Summer 2017) </li>
@@ -53,7 +53,7 @@
 		
 		<div class="space"></div>
 		
-		<div class="hobbies">
+		<div id="hobbies">
 			<h3>Hobbies</h3>
 			<ul>
 				<li>Reading </li>
@@ -65,10 +65,10 @@
 		
 		<div class="space"></div>
 		
-		<div class="references">
+		<div id="references">
 			<h3>References</h3>
 			<ul>
-	   				<li> Johnathan Grant johngrant@gmail.com 555-8865 Justice of the Peace </li>
+	   				<li> Johnathan Grant johngrant@gmail.com 555-8865 Justice of the Peace</li>
 	   				<li> Jose Marti jmartin@yahoo.com 999-6543 Lecturer</li>
 	   		</ul>
 		</div>
